Add notes about installed packages.

--- a/README.org
+++ b/README.org
@@ -1,3 +1,9 @@
 * .emacs.d
 
 This is my personal =.emacs.d= directory.
+
+** Installed Packages
+
+- [[https://github.com/magit/magit][Magit]]
+- [[https://github.com/greghendershott/racket-mode][Racket Mode]]
+- [[https://common-lisp.net/project/slime/][SLIME]]
